# server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =5.0.5  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.base  Dockerfile.debian  MANIFEST.in  README.md  README.rst  compose.yml  config.json  docker-compose.example.yml  get_account_playlists_collection0.json  get_playlist_details.json  kladblad.py  kladblad2.py  kladblad3.py  main.py  mass.py  music_assistant.code-workspace  mypy.ini  parse_artist.json  parse_playlist.json  parse_playlist_new.json  parse_track.json  pylintrc  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  run.sh  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: auto_approve_dependabot.yml  build-base-image.yml  docker-build alpine.yml  docker-build-multiarch.yml  docker-build.yml  pr-labels.yaml  pre-commit-updater.yml  publish-to-pypi.yml  release-drafter-dev.yml  release-drafter-stable.yml  release.yml  stale.yml  test.yml  test_docker_build.yml
docs/: manifest.json  service-worker.js
docs/css/: app.6d696805.css  chunk-vendors.a33c7f56.css  itemdetails~playerqueue~search.133d2876.css
docs/js/: app.81ba02ca.js.map  chunk-vendors.5b46ae16.js  config.48c55459.js.map  itemdetails.5e5ff779.js.map  itemdetails~playerqueue~search.3c623cdf.js  itemdetails~playerqueue~search.3c623cdf.js.map  playerqueue.30178d85.js  playerqueue.30178d85.js.map
examples/: full.py  simple.py  ytmusic.py
frontend/: .editorconfig  .gitignore  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  i18n.js  main.js  registerServiceWorker.js
frontend/src-cordova/: config.xml  package-lock.json  package.json
music_assistant/: __init__.py  __main__.py  api.py  app_vars.py  cache.py  config.py  constants.py  database.py  homeassistant.py  http_streamer.py  main.py  main.spec  mass.py  metadata.py  models.py  music.py  music_manager.py  player.py  player_manager.py  secrets.py  stream_manager.py  tasks.py  translations.json  utils.py  web.py
music_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
music_assistant/client/: __init__.py  client.py  config.py  connection.py  exceptions.py  music.py  player_queues.py  players.py
music_assistant/common/: __init__.py
music_assistant/config/: __init__.py  models.py
music_assistant/controllers/: cache.py  database.py  music.py  players.py  settings.py  stream.py  streams.py
music_assistant/helpers/: app_vars.py  audio.py  cache.py  compare.py  database.py  datetime.py  encryption.py  errors.py  images.py  json.py  logger.py  migration.py  muli_state_queue.py  musicbrainz.py  playlists.py  process.py  repath.py  tags.py  tasks.py  typing.py  uri.py  util.py  web.py
music_assistant/managers/: __init__.py  config.py  database.py  events.py  library.py  metadata.py  music.py  players.py  streams.py  tasks.py
music_assistant/metadata/: __init__.py  fanarttv.py  models.py  musicbrainz.py
music_assistant/models/: __init__.py  background_job.py  config.py  config_entry.py  enums.py  errors.py  event.py  media_controller.py  media_items.py  media_types.py  music_provider.py  musicprovider.py  player.py  player_queue.py  player_settings.py  player_state.py  playerprovider.py  playerstate.py  provider.py  queue_item.py  queue_settings.py  queue_stream.py  streamdetails.py
music_assistant/modules/: cache.py  homeassistant.py  http_streamer.py  metadata.py  music.py  music_manager.py  player.py  player_manager.py  web.py
music_assistant/music/: __init__.py  albums.py  artists.py  library.py  models.py  playlists.py  radio.py  tracks.py
music_assistant/music_providers/: __init__.py  filesystem.py  model.py  qobuz.py  spotify.py  tunein.py  url.py  ytmusic.py
music_assistant/musicproviders/: file.py  qobuz.py  spotify.py  tunein.py
music_assistant/player_providers/: __init__.py
music_assistant/player_queue/: __init__.py  models.py
music_assistant/playerproviders/: chromecast.py  lms.py  pylms.py  sonos.py  squeezebox.py  web.py  webplayer.py
music_assistant/players/: __init__.py  models.py  stream.py
music_assistant/providers/: __init__.py  filesystem.py  qobuz.py  tunein.py
music_assistant/resources/: alert_announce.flac  alert_finish.flac  announce.flac
music_assistant/server/: __init__.py  server.py
music_assistant/web/: __init__.py  api.py  app.js  index.html  json_rpc.py  manifest.json  precache-manifest.41143c0c7b0781d9975365999a94a71f.js  precache-manifest.530ccae495c360d7e0779298b9ea2ecf.js  precache-manifest.55be070e626c41c3fe7e746d54dd3893.js  precache-manifest.62c7525ad06925304a3249f0862876ff.js  precache-manifest.69a2c2c748b337760e88b872f6a8f34b.js  precache-manifest.6fd68e14f638c9487493c5cedb5cb097.js  precache-manifest.7d1a9077241115c1dc586f5d8e7900b1.js  precache-manifest.7f0954cd4623c3d2f5436871e61dd4fa.js  precache-manifest.990472d7279e3a7045e6be162fae645b.js  precache-manifest.9a0bd54d62e421b027d4d3e6b3533afe.js  precache-manifest.9e072176b29e791b2c1381ac3080328c.js  precache-manifest.a6b4d4bebd53aa4454c0ec23edfb31e4.js  precache-manifest.add5e207ea18caf7f821662387e34afc.js  precache-manifest.af094e2fe1b27f0e08170369f890f4e7.js  precache-manifest.b2f29b1e01a3ce8c6d1036fef5e00131.js  precache-manifest.b9c69d694ec3f0e2f2a145256a23d836.js  precache-manifest.be334d0e4fc2262edf24eb422e508efa.js  precache-manifest.e1bc4360d0bea6c59b9258440a2bb0cc.js  precache-manifest.f0d0d80b1a7a5dd375bc8acbb714b4ba.js  server.py  service-worker.js  setup.html  stream.py  (+3 more)
script/: example.py  gen_requirements_all.py  profiler.py
scripts/: __init__.py  example.py  gen_requirements_all.py  profiler.py  run-in-env.sh  setup.sh
tests/: __init__.py  common.py  conftest.py  test_helpers.py  test_radio_stream_title.py  test_tags.py  utils.py
webapp/: precache-manifest.34002e65e5b42dcdcd277e3a262c7467.js
(+687 files in other folders)
