[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "music_assistant"
dynamic = ["version"]
license     = {text = "Apache-2.0"}
description = "Music Assistant"
readme = "README.md"
requires-python = ">=3.10"
authors     = [
    {name = "The Music Assistant Authors", email = "marcelveldt@users.noreply.github.com"}
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "aiohttp",
  "orjson",
  "mashumaro"
]

[project.optional-dependencies]
server = [
  "faust-cchardet>=2.1.18",
  "aiodns>=3.0.0",
  "Brotli>=1.0.9",
  "aiohttp==3.8.4",
  "asyncio-throttle==1.0.2",
  "aiofiles==23.1.0",
  "aiorun==2022.11.1",
  "coloredlogs==15.0.1",
  "aiosqlite==0.19.0",
  "python-slugify==8.0.1",
  "mashumaro==3.7",
  "memory-tempfile==2.2.3",
  "music-assistant-frontend==20230616.0",
  "pillow==9.5.0",
  "unidecode==1.3.6",
  "xmltodict==0.13.0",
  "orjson==3.9.1",
  "shortuuid==1.0.11",
  "zeroconf==0.64.1",
  "cryptography==41.0.1"
]
test = [
  "black==23.3.0",
  "codespell==2.2.4",
  "mypy==1.3.0",
  "ruff==0.0.272",
  "pytest==7.3.2",
  "pytest-asyncio==0.21.0",
  "pytest-aiohttp==1.0.4",
  "pytest-cov==4.1.0",
  "pre-commit==3.3.2"
]

[project.scripts]
mass = "music_assistant.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "music_assistant.constants.__version__"}

[tool.black]
target-version = ['py311']
line-length = 100

[tool.codespell]
ignore-words-list = "provid,hass,followings"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
#disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
mypy_path = "music_assistant/"
no_implicit_optional = true
show_error_codes = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "aiorun",
  "coloredlogs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
packages = ["music_assistant"]
include-package-data = true

[tool.setuptools.package-data]
music_assistant = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true

# enable later: "C90", "PTH", "TCH", "RET", "ANN"
select = ["E", "F", "W", "I", "N", "D", "UP", "PL", "Q", "SIM", "TID", "ARG"]
ignore = ["PLR2004", "N818"]
extend-exclude = ["app_vars.py"]
unfixable = ["F841"]
line-length = 100
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.pylint]

max-branches=25
max-returns=15
max-args=10
max-statements=50
